[package]
authors = ["Matt Ware"]
name = "rust_in_peace"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simplelog = "0.12.1"
chrono = "0.4.24"
time = "0.3.20"
glium = "0.32.1"
build-time = "0.1.2"
